--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ h1,h3,h2,h4,h5,h6{
   margin: 0 auto;
 }
 
-.img-rounded {
+.img-rounded {header
   border-radius: 5px;
   margin: 5px auto 20px auto;
 }
