--- a/css/style.css
+++ b/css/style.css
@@ -867,7 +867,7 @@ p.para-agileits-w3layouts {
 /*--//classes--*/
 /*-- clients --*/
 .contact-w3layouts h3,.clients h3 {
-    color: #000!important;
+    color: white!important;
 }
 .spldishes-w3left {
     padding: 2.3em;
